<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    tools:ignore="MergeRootFrame">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000" />

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="50dp"
        android:background="@drawable/circular_background">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:contentDescription="@string/weather"
            android:src="@drawable/weather" />
    </FrameLayout>

    <TextView
        android:layout_marginTop="180dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/calling_status"
    android:textColor="@color/white"
    android:textSize="18sp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/camera_switch_button"
        android:src="@drawable/ic_voice_call_stop"
        app:backgroundTint="@color/white"
        app:tint="@color/red"
        app:elevation="8dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/speaker_switch_button"
        android:src="@drawable/ic_switch_speaker"
        app:backgroundTint="@color/white"
        app:tint="@color/black"
        app:elevation="8dp"
        tools:ignore="RtlHardcoded" />

</FrameLayout>